# Notifications-Service

./: .env.example  .gitignore  Makefile  pyproject.toml
app/: container.py  dependencies.py  main.py
app/api/v1/: healthcheck.py
app/config/: db.py  logging.py  settings.py
app/models/: __init__.py  base.py  notification.py  user.py
app/repositories/: __init__.py  base.py  notification.py  user.py
app/schemas/: healthcheck.py  user.py
