[tool.poetry]
name = "notifications-service"
version = "0.1.0"
description = ""
authors = ["RocketMenace <grizzlygit777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
sqlalchemy = "^2.0.42"
aio-pika = "^9.5.7"
asyncpg = "^0.30.0"
alembic = "^1.16.4"
pydantic-settings = "^2.10.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
